--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,19 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+!.env.example
+
+# database
+dev.db
+dev.db-journal
+*.db
+*.db-journal
+
+# uploads
+/public/uploads
+
+# temp files
+temp_*.json
 
 # vercel
 .vercel
@@ -39,3 +52,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
