--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "next": "16.1.4",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "prisma": "^5.22.0",
     "typescript": "^5"
   }
 }
