--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
+    "jose": "^6.1.3",
     "next": "16.1.4",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
