--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@supabase/supabase-js": "^2.94.1",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "jose": "^6.1.3",
     "next": "16.1.4",
